--- a/docs/style.css
+++ b/docs/style.css
@@ -9,6 +9,14 @@ body
         
 }
 
+.custom-ar-button
+{
+    font-size: 24px;
+    position: absolute;
+    bottom: 16px;
+    left: 16px;
+}
+
 .hotspot
 {
     display: block;
