--- a/docs/style.css
+++ b/docs/style.css
@@ -12,9 +12,9 @@ body
 .custom-ar-button
 {
     font-size: 24px;
-    position: absolute;
-    bottom: 16px;
-    left: 16px;
+    position:relative;
+    /* bottom: 16px; */
+    /* left: 16px; */
 }
 
 .hotspot
