--- a/docs/style.css
+++ b/docs/style.css
@@ -5,18 +5,12 @@ body
     width: auto;
 }
 
-/* .model-viewer
-{
-    ar
-    
-} */
-
 .custom-ar-button
 {
     font-size: 100px;
     position:absolute;
-    right:0;
-    /* bottom: 16px; */
+    right:16px;
+    bottom: 16px;
     /* left: 16px; */
     border: 1px solid black;
 }
