--- a/docs/style.css
+++ b/docs/style.css
@@ -5,6 +5,11 @@ body
     width: auto;
 }
 
+.model-viewer
+{
+
+}
+
 .custom-ar-button
 {
     font-size: 100px;
@@ -27,7 +32,7 @@ body
     pointer-events: none;
 }
 
- .hotspot[slot="hotspot-hand"]
+.hotspot[slot="hotspot-hand"]
 {
     --min-hotspot-opacity: 0;
     background-color: red;
