--- a/docs/style.css
+++ b/docs/style.css
@@ -46,7 +46,7 @@ body
 
 .annotation
 {
-    background-color: #888888;
+    background-color:chartreuse;
     position: absolute;
     transform: translate(10px, 10px);
     border-radius: 10px;
