--- a/docs/style.css
+++ b/docs/style.css
@@ -16,7 +16,7 @@ h1
 .grid 
 {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-columns: repeat(2, 1fr); /* 横2列に固定 */
   gap: 20px;
   margin-top: 40px;
 }
