--- a/docs/style.css
+++ b/docs/style.css
@@ -21,6 +21,12 @@ h1
   margin-top: 40px;
 }
 
+@media screen and (max-width: 768px) {
+  .grid {
+    grid-template-columns: 1fr; /* スマホでは1列に */
+  }
+}
+
 model-viewer 
 {
   width: 100%;
